--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 python:
-  - "3.5"
+  - "3.8"
 install:
   - pip install requests
 # command to run tests
 script:
-  - python test_retrieve_repos.py
+  - python test_retrieve_repos
