--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "3.8"
 
-# install dependencies
+# install all dependencies
 install:
   - pip install requests
 # command to run tests
